Rename Chinese branding from 自语力 to 自我对话

--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-title-zh="关于我 - 自语力" data-title-en="About Me - SelfTalk">About Me - SelfTalk</title>
+    <title data-title-zh="关于我 - 自我对话" data-title-en="About Me - SelfTalk">About Me - SelfTalk</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6928529142816465" crossorigin="anonymous"></script>
     <link rel="alternate" hreflang="en" href="/about/en/">
     <link rel="alternate" hreflang="zh" href="/about/zh/">
@@ -580,7 +580,7 @@
     <!-- 导航栏 -->
     <nav>
         <div class="nav-container">
-            <a href="/" class="logo" data-text-zh="自语力" data-text-en="SelfTalk">SelfTalk</a>
+            <a href="/" class="logo" data-text-zh="自我对话" data-text-en="SelfTalk">SelfTalk</a>
             <div class="nav-links">
                 <a href="/" data-text-zh="首页" data-text-en="Home">Home</a>
                 <a href="/#how" data-text-zh="如何运作" data-text-en="How It Works">How It Works</a>
@@ -601,7 +601,7 @@
             <section class="hero-about">
                 <div class="hero-content">
                     <h1>关于我</h1>
-                    <p class="subtitle">我曾经深陷直播和短视频的漩涡，通过自语力的方法在几周内戒掉这些习惯，现在把最真实有效的经验分享给你。</p>
+                    <p class="subtitle">我曾经深陷直播和短视频的漩涡，通过自我对话的方法在几周内戒掉这些习惯，现在把最真实有效的经验分享给你。</p>
                 </div>
             </section>
 
@@ -623,7 +623,7 @@
                             <div class="timeline-dot"></div>
                             <div class="timeline-content">
                                 <div class="timeline-year">2022年</div>
-                                <h3 class="timeline-title">自语力方法成形</h3>
+                                <h3 class="timeline-title">自我对话方法成形</h3>
                                 <p class="timeline-description">我把心理学中的自我对话练习写成一句句提醒，坚持训练，在几周内就摆脱了刷直播、刷短视频的冲动，重新找回专注和节奏。</p>
                             </div>
                         </div>
@@ -642,7 +642,7 @@
                             <div class="timeline-content">
                                 <div class="timeline-year">2024年至今</div>
                                 <h3 class="timeline-title">想与你分享</h3>
-                                <p class="timeline-description">为了让更多人受益，我把这套练习整理成自语力，真心希望每一个想摆脱旧习惯的人，都能在这里找到可靠的支持。</p>
+                                <p class="timeline-description">为了让更多人受益，我把这套练习整理成自我对话，真心希望每一个想摆脱旧习惯的人，都能在这里找到可靠的支持。</p>
                             </div>
                         </div>
                     </div>
@@ -658,7 +658,7 @@
                             <div class="team-avatar">我</div>
                             <h3 class="team-name">我自己</h3>
                             <p class="team-role">戒掉直播和短视频</p>
-                            <p class="team-description">每天用自语力复盘当天的触发点，让"想刷"的声音变成"我选择停下"，终于摆脱了无休止的刷屏。</p>
+                            <p class="team-description">每天用自我对话复盘当天的触发点，让"想刷"的声音变成"我选择停下"，终于摆脱了无休止的刷屏。</p>
                         </div>
 
                         <div class="team-member">
@@ -692,7 +692,7 @@
                         <div class="value-card">
                             <div class="value-icon">❤️</div>
                             <h3 class="value-title">真诚陪伴</h3>
-                            <p class="value-description">改变时最需要被理解，我会用真实的经验回应你的困惑，让自语力像朋友一样出现。</p>
+                            <p class="value-description">改变时最需要被理解，我会用真实的经验回应你的困惑，让自我对话像朋友一样出现。</p>
                         </div>
 
                         <div class="value-card">
