--- a/index.html
+++ b/index.html
@@ -1493,7 +1493,7 @@
     <!-- 导航栏 -->
     <nav>
         <div class="nav-container">
-            <a href="/" class="logo" data-text-zh="自语力" data-text-en="SelfTalk">SelfTalk</a>
+            <a href="/" class="logo" data-text-zh="自我对话" data-text-en="SelfTalk">SelfTalk</a>
             <div class="nav-links">
                 <a href="#how" data-text-zh="如何运作" data-text-en="How It Works" data-href-zh="#how" data-href-en="#how-en">How It Works</a>
                 <a href="#stories" data-text-zh="成功故事" data-text-en="Success Stories" data-href-zh="#stories" data-href-en="#stories-en">Success Stories</a>
@@ -1539,7 +1539,7 @@
                     <div class="quick-card">
                         <div class="quick-icon">🧠</div>
                         <h3>了解自我对话原理</h3>
-                        <p>先看自语力的方法拆解，确认它如何无痛重写习惯回路。</p>
+                        <p>先看自我对话的方法拆解，确认它如何无痛重写习惯回路。</p>
                         <a href="#how">查看步骤</a>
                     </div>
                     <div class="quick-card">
@@ -1569,7 +1569,7 @@
                         <p class="how-eyebrow">如何运作</p>
                         <h2>最新脑科学告诉我们：刻意的自我对话可以重写习惯回路</h2>
                         <p>神经科学研究表明，大脑会根据内部声音来预测奖励与危险；当我们有意识地改写这些声音时，就能在不触发强烈戒断反应的情况下，重新训练神经通路。李笑来老师也在他的自我对话课程里提醒过：“用自己的声音对自己讲话，是最具说服力的输入”。</p>
-                        <p>自语力把这一套方法拆成 21 天脚本：每天三段自我对话、一次神经系统放松练习、以及一个行为替代。你需要做的，就是跟我一样照着念、照着写。</p>
+                        <p>自我对话把这一套方法拆成 21 天脚本：每天三段自我对话、一次神经系统放松练习、以及一个行为替代。你需要做的，就是跟我一样照着念、照着写。</p>
                     </div>
                     <div class="how-points">
                         <article class="how-card">
@@ -1626,7 +1626,7 @@
                                 <p><strong>我复盘：</strong>今天错过了两个刷视频的机会，因为我提前写好了“我为什么要保持清醒”。</p>
                                 <p><strong>我写下：</strong>我的大脑已经习惯主动选择，渴望变得模糊了。</p>
                             </div>
-                            <p class="sample-meta">行动：把最有效的语句录成语音，保存到自语力 App/提醒中，作为下一轮强化素材。</p>
+                            <p class="sample-meta">行动：把最有效的语句录成语音，保存到自我对话 App/提醒中，作为下一轮强化素材。</p>
                             <div class="sample-actions">
                                 <a class="secondary-button" href="/start">领取完整 21 天脚本</a>
                                 <a class="secondary-button" href="mailto:selftalkernow@outlook.com">告诉我你的 Day 1</a>
@@ -1638,7 +1638,7 @@
 
             <section class="practice-section" id="practice">
                 <h2>写 · 念 · 听：3 分钟练习自己的声音</h2>
-                <p class="section-intro">自语力的关键在于“把自己的声音变成最可信的输入”。以下是我每天做的练习，你也可以照做。</p>
+                <p class="section-intro">自我对话的关键在于“把自己的声音变成最可信的输入”。以下是我每天做的练习，你也可以照做。</p>
                 <div class="practice-container">
                     <div class="practice-card">
                         <h3>1. 写下来</h3>
@@ -1707,8 +1707,8 @@
                 <div class="about-container">
                     <div class="about-copy">
                         <p class="about-eyebrow">关于我</p>
-                        <h2>自语力是我用来自救的 21 天对话练习</h2>
-                        <p>几年前的我几乎每天刷直播到凌晨，情绪被主播牵着走。直到把脑海里的声音写成自语力脚本，一句句对自己复述，我在几周内戒掉了直播和短视频。</p>
+                        <h2>自我对话是我用来自救的 21 天对话练习</h2>
+                        <p>几年前的我几乎每天刷直播到凌晨，情绪被主播牵着走。直到把脑海里的声音写成自我对话脚本，一句句对自己复述，我在几周内戒掉了直播和短视频。</p>
                         <p>后来我邀请朋友一起练习，有人完成 21 天戒烟，有人告别习惯性饮酒。我们记录诱因、换掉旧习惯，用同样的脚本彼此见证改变。</p>
                         <div class="about-actions">
                             <a class="link-button" href="/about">阅读完整故事</a>
@@ -1725,7 +1725,7 @@
                         </article>
                         <article class="about-card">
                             <h3>分享的初心</h3>
-                            <p>我知道从头开始有多难，所以把完整流程整理在自语力里，让你随时调出脚本练习。</p>
+                            <p>我知道从头开始有多难，所以把完整流程整理在自我对话里，让你随时调出脚本练习。</p>
                         </article>
                     </div>
                 </div>
@@ -1857,7 +1857,7 @@
                         <a href="/insights">查看进度</a>
                     </div>
                     <div class="articles-card">
-                        <h3>自语力模板包：打印版 & Notion</h3>
+                        <h3>自我对话模板包：打印版 & Notion</h3>
                         <p>整理所有 21 天脚本的可打印卡片与 Notion 模板，方便你随时携带和记录。</p>
                         <a href="/insights">查看进度</a>
                     </div>
@@ -1897,7 +1897,7 @@
                     <details class="faq-item">
                         <summary><span class="faq-question">🧰 配合其他工具</span></summary>
                         <div class="faq-answer">
-                            不强求。自语力专注在“预测与反应”的对话训练：
+                            不强求。自我对话专注在“预测与反应”的对话训练：
                             <ul>
                                 <li>若你搭配运动、正念或戒烟贴片，脚本可以与它们协同。</li>
                                 <li>在医疗方案进行中，也能把每日对话带给医生/治疗师，作为追踪依据。</li>
@@ -1908,10 +1908,10 @@
             </section>
 
             <section class="subscription" id="subscribe">
-                <h2>订阅「自语力·习惯实验室」</h2>
+                <h2>订阅「自我对话·习惯实验室」</h2>
                 <p>第一时间收到新的习惯模板、进阶练习与科普文章。我们只在有实用内容时发送邮件。</p>
                 <div class="subscription-cta">
-                    <a class="cta-button" href="mailto:selftalkernow@outlook.com?subject=订阅自语力文章&body=你好，我想订阅文章和脚本更新。">写信提醒我</a>
+                    <a class="cta-button" href="mailto:selftalkernow@outlook.com?subject=订阅自我对话文章&body=你好，我想订阅文章和脚本更新。">写信提醒我</a>
                 </div>
                 <p class="muted">也可以直接写信到 selftalkernow@outlook.com，一起琢磨你的 21 天练习。</p>
             </section>
@@ -2341,7 +2341,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 <span data-text-zh="自语力" data-text-en="SelfTalk">SelfTalk</span> SelfTalk. All rights reserved.</p>
+        <p>&copy; 2024 <span data-text-zh="自我对话" data-text-en="SelfTalk">SelfTalk</span> SelfTalk. All rights reserved.</p>
         <p data-text-zh="用科学的方法，成就更好的自己" data-text-en="Transform yourself with science-based methods">Transform yourself with science-based methods</p>
     </footer>
 
@@ -2440,7 +2440,7 @@
 
             // 更新页面标题
             const title = lang === 'zh' ? 
-                '自语力 - 用对话改变自己，从今天开始' : 
+                '自我对话 - 用对话改变自己，从今天开始' : 
                 'SelfTalk - Transform Yourself Through Self-Talk';
             document.title = title;
 
