--- a/insights/index.html
+++ b/insights/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-title-zh="自语力文章 - 自语力" data-title-en="SelfTalk Insights - SelfTalk">SelfTalk Insights - SelfTalk</title>
+    <title data-title-zh="自我对话文章 - 自我对话" data-title-en="SelfTalk Insights - SelfTalk">SelfTalk Insights - SelfTalk</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-T9ZN9KSK27"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
@@ -289,7 +289,7 @@
 
     <nav>
         <div class="nav-container">
-            <a href="/" class="logo" data-text-zh="自语力" data-text-en="SelfTalk">SelfTalk</a>
+            <a href="/" class="logo" data-text-zh="自我对话" data-text-en="SelfTalk">SelfTalk</a>
             <div class="nav-links">
                 <a href="/" data-text-zh="首页" data-text-en="Home">Home</a>
                 <a href="/#how" data-text-zh="如何运作" data-text-en="How It Works">How It Works</a>
@@ -306,7 +306,7 @@
         <div class="content active" data-lang="zh">
             <section class="hero">
                 <div class="hero-inner">
-                    <h1>自语力·习惯实验室文章</h1>
+                    <h1>自我对话·习惯实验室文章</h1>
                     <p>记录我如何用自我对话完成戒直播、帮助朋友戒烟，以及背后的脑科学原理、练习拆解与真实案例。每一篇文章都力求可复制、可执行。</p>
                 </div>
             </section>
@@ -351,7 +351,7 @@
                     <h2>第一时间收到新文章</h2>
                     <p>写信告诉我“我要订阅”，每篇文章上线时我都会发送摘要与可执行清单。</p>
                     <div class="newsletter-cta">
-                        <a class="cta-button" href="mailto:selftalkernow@outlook.com?subject=订阅习惯实验室文章&body=你好，我想订阅自语力文章更新。">写信提醒我</a>
+                        <a class="cta-button" href="mailto:selftalkernow@outlook.com?subject=订阅习惯实验室文章&body=你好，我想订阅自我对话文章更新。">写信提醒我</a>
                     </div>
                 </div>
             </section>
