--- a/insights/quit-smoking-triggers.html
+++ b/insights/quit-smoking-triggers.html
@@ -308,7 +308,7 @@
 
     <nav>
         <div class="nav-container">
-            <a href="/" class="logo" data-text-zh="自语力" data-text-en="SelfTalk">自语力</a>
+            <a href="/" class="logo" data-text-zh="自我对话" data-text-en="SelfTalk">自我对话</a>
             <div class="nav-links">
                 <a href="/" data-text-zh="首页" data-text-en="Home">首页</a>
                 <a href="/start" data-text-zh="开始" data-text-en="Start">开始</a>
@@ -443,7 +443,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 <span data-text-zh="自语力" data-text-en="SelfTalk">自语力</span> SelfTalk. All rights reserved.</p>
+        <p>&copy; 2024 <span data-text-zh="自我对话" data-text-en="SelfTalk">自我对话</span> SelfTalk. All rights reserved.</p>
         <p data-text-zh="用科学的方法，成就更好的自己" data-text-en="Transform yourself with science-based methods">用科学的方法，成就更好的自己</p>
     </footer>
 
