--- a/start/index.html
+++ b/start/index.html
@@ -1053,7 +1053,7 @@
     <!-- 导航栏 -->
     <nav>
         <div class="nav-container">
-            <a href="/" class="logo" data-text-zh="自语力" data-text-en="SelfTalk">SelfTalk</a>
+            <a href="/" class="logo" data-text-zh="自我对话" data-text-en="SelfTalk">SelfTalk</a>
             <div class="nav-links">
                 <a href="/" data-text-zh="首页" data-text-en="Home">Home</a>
                 <a href="/#how" data-text-zh="如何运作" data-text-en="How It Works">How It Works</a>
@@ -1105,7 +1105,7 @@
 
             <section class="step-view active" data-step="1">
                 <div class="step-intro">
-                    <p class="lead-paragraph">先选一个你最想突破的方向，自语力会为你生成 21 天逐日练习。随时可切换语言或返回重新选择。</p>
+                    <p class="lead-paragraph">先选一个你最想突破的方向，自我对话会为你生成 21 天逐日练习。随时可切换语言或返回重新选择。</p>
                     <div class="pathway-grid">
                         <button type="button" class="pathway-card selected" data-pathway="break-bad-habit">
                             <span class="pathway-icon">🚫</span>
@@ -1573,7 +1573,7 @@
         });
 
         const titleText = targetLang === 'zh'
-            ? '开始改变 - 自语力'
+            ? '开始改变 - 自我对话'
             : 'Start Your Transformation - SelfTalk';
         document.title = titleText;
 
