Add Q&A nav label and homepage accordion

--- a/index.html
+++ b/index.html
@@ -1515,7 +1515,7 @@
             <div class="nav-links">
                 <a href="#how" data-text-zh="如何运作" data-text-en="How It Works" data-href-zh="#how" data-href-en="#how-en">How It Works</a>
                 <a href="#stories" data-text-zh="成功故事" data-text-en="Success Stories" data-href-zh="#stories" data-href-en="#stories-en">Success Stories</a>
-                <a href="#faq" data-text-zh="常见问题" data-text-en="FAQ" data-href-zh="#faq" data-href-en="#faq-en">FAQ</a>
+                <a href="#faq" data-text-zh="Q&A" data-text-en="Q&A" data-href-zh="#faq" data-href-en="#faq-en">Q&A</a>
                 <a href="/insights" data-text-zh="文章" data-text-en="Articles">Articles</a>
                 <a href="#about" data-text-zh="关于我" data-text-en="About Me" data-href-zh="#about" data-href-en="#about-en">About Me</a>
                 <a href="/start" class="cta-button" data-text-zh="开始改变" data-text-en="Start Now">Start Now</a>
@@ -1574,6 +1574,40 @@
                     <div class="core-actions">
                         <a href="/insights" class="secondary-link">更多故事与工具 &rarr;</a>
                     </div>
+                </div>
+            </section>
+
+            <section class="faq-section" id="faq">
+                <div class="faq-container">
+                    <div>
+                        <p class="core-eyebrow">Q&A</p>
+                        <h2>常见疑问，一次说明白</h2>
+                        <p>这些问题来自刚开始尝试自我对话的朋友，展开即可了解并跳转到对应的资源。</p>
+                    </div>
+                    <details class="faq-item">
+                        <summary>
+                            <span class="faq-question">Q：真的必须出声朗读吗？</span>
+                        </summary>
+                        <div class="faq-answer">
+                            <p>必须出声，把文字变成声音，大脑才会重新标记奖励。打开 <a href="/start">开始页面</a>，跟着脚本练习、边录边听，效果会立刻不同。</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>
+                            <span class="faq-question">Q：21 天脚本多久能拿到？</span>
+                        </summary>
+                        <div class="faq-answer">
+                            <p>提交动机和提醒后，Day 1 会立即生成。前往 <a href="/start">生成计划</a>，选择“戒烟”或其他习惯，系统会马上给出每日提示。</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>
+                            <span class="faq-question">Q：想先理解原理，有推荐的文章吗？</span>
+                        </summary>
+                        <div class="faq-answer">
+                            <p>可以阅读 <a href="/insights/quit-smoking-triggers.html">《戒烟触发器拆解》</a>，我们用双语整理了“触发 → 自我对话 → 微行动”的科学依据。</p>
+                        </div>
+                    </details>
                 </div>
             </section>
 
@@ -1637,6 +1671,40 @@
                     <div class="core-actions">
                         <a href="/insights?lang=en" class="secondary-link">Stories & tools &rarr;</a>
                     </div>
+                </div>
+            </section>
+
+            <section class="faq-section" id="faq-en">
+                <div class="faq-container">
+                    <div>
+                        <p class="core-eyebrow">Q&A</p>
+                        <h2>Your biggest questions, answered</h2>
+                        <p>These are the top questions new members ask—expand to get the context and jump to the resource.</p>
+                    </div>
+                    <details class="faq-item">
+                        <summary>
+                            <span class="faq-question">Q: Do I really have to read out loud?</span>
+                        </summary>
+                        <div class="faq-answer">
+                            <p>Yes. Your own voice is the cue that rewires the habit loop. The <a href="/start?lang=en">Start workspace</a> lets you rehearse scripts, record yourself, and play them back in one place.</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>
+                            <span class="faq-question">Q: When do I receive the 21-day script?</span>
+                        </summary>
+                        <div class="faq-answer">
+                            <p>Once you set your motivations and reminders, Day 1 appears instantly. Build the sequence on the <a href="/start?lang=en">Start page</a> and keep practising daily.</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>
+                            <span class="faq-question">Q: Where can I dive into the science?</span>
+                        </summary>
+                        <div class="faq-answer">
+                            <p>Read our bilingual <a href="/insights/quit-smoking-triggers.html?lang=en">quit smoking triggers guide</a> for the neuroscience behind trigger → self-talk → micro-action.</p>
+                        </div>
+                    </details>
                 </div>
             </section>
 
