--- a/start/index.html
+++ b/start/index.html
@@ -1549,7 +1549,7 @@
 
 <script>
 (function() {
-    const STORAGE_KEY = 'preferred-language';
+    const STORAGE_KEY = 'preferred-language-v2';
 
     function applyLanguage(lang) {
         const targetLang = lang === 'zh' ? 'zh' : 'en';
