Fix About link on homepage

--- a/index.html
+++ b/index.html
@@ -1517,7 +1517,7 @@
                 <a href="#stories" data-text-zh="成功故事" data-text-en="Success Stories" data-href-zh="#stories" data-href-en="#stories-en">Success Stories</a>
                 <a href="#faq" data-text-zh="Q&A" data-text-en="Q&A" data-href-zh="#faq" data-href-en="#faq-en">Q&A</a>
                 <a href="/insights" data-text-zh="文章" data-text-en="Articles">Articles</a>
-                <a href="#about" data-text-zh="关于我" data-text-en="About Me" data-href-zh="#about" data-href-en="#about-en">About Me</a>
+                <a href="/about" data-text-zh="关于我" data-text-en="About Me">About Me</a>
                 <a href="/start" class="cta-button" data-text-zh="开始改变" data-text-en="Start Now">Start Now</a>
             </div>
         </div>
@@ -1833,14 +1833,12 @@
                     '#how-en': '#how',
                     '#stories-en': '#stories',
                     '#faq-en': '#faq',
-                    '#about-en': '#about',
                     '#journey-en': '#journey'
                 }
                 : {
                     '#how': '#how-en',
                     '#stories': '#stories-en',
                     '#faq': '#faq-en',
-                    '#about': '#about-en',
                     '#journey': '#journey-en'
                 };
 
